# ports-list

./: .gitignore  README.md  pyproject.toml
ports_list/: ports.py
portslist/: __main__.py  ports.py
tests/: test_ports_list.py
