[tool.poetry]
name = "portslist"
version = "0.1.2"
description = "List listening ports on terminal"
authors = ["lethe <lethe30003000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.4"
textual = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
